k8s/system-argocd/ingress-argocd-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.sapphiccode.net
      secretName: star-sapphiccode-net-tls
  rules:
    - host: argocd.sapphiccode.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.sapphicco.de`)
      services:
        - name: argocd-server
          port: http
  tls:
    certResolver: cloudflare
    domains:
      - main: '*.sapphicco.de'
